--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
-                  <div id="apDiv24">OVA Para curso 204039 - Seguridad Informática</div>
+                  <div id="apDiv24">OVA PARA EL CURSO 204039 - SEGURIDAD INFORMÁTICA</div>
               </div>
             </header>
         	<p>&nbsp;</p>
@@ -62,31 +62,32 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Seguridad Informática - UNAD ECBTI</h2>
+    <h2>SEGURIDAD INFORMÁTICA - UNAD ECBTI</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
+                        <img src="img/candado.jpg" alt="Diseno">
                   	</figure>
                     <p>
                         Descripción General del Curso:<br>
                         • En la actualidad los recursos informáticos y el uso de nuevas tecnologías para el procesamiento de
-información hacen parte de todas las organizaciones, y temas como seguridad en la información cobran
-más vigencia.
-El curso de Seguridad informática, pretende orientar a los estudiantes en los fundamentos de seguridad de la información, comprender las necesidades de proteger, salvaguardar la información de las empresas y mantener disponibles los servicios de redes y comunicaciones.
+información hacen parte de todas las organizaciones, y temas como seguridad en la información cobran más vigencia.
+El curso de Seguridad informática, pretende orientar a los estudiantes en los fundamentos de seguridad de la información, comprender las necesidades de proteger, salvaguardar la información de las empresas y mantener disponibles los servicios de redes y comunicaciones.<br>
+<br>
 En la unidad 1, Fundamentos de seguridad de la información; presenta los conceptos fundamentales necesarios para la comprensión de la seguridad, de los actores de la inseguridad, la necesidad de prevenir incidentes, los diferentes tipos de amenazas, la Criptografía, los conceptos básicos de seguridad en sistemas operativos.
 La segunda unidad Estándares y Normatividad, presenta las normas internacionales de mejores prácticas en aplicación de la seguridad informática, como ISO 27000, el análisis de riesgos y la gestión de riesgos
 y los conceptos básicos de auditoria de sistemas informáticos.
-La tercera unidad Seguridad en Redes, propone la temática referente a controles lógicos y perimetrales, técnicas de ataques a los sistemas de información, técnicas de verificación y chequeos en penetración como análisis de vulnerabilidades.
+La tercera unidad Seguridad en Redes, propone la temática referente a controles lógicos y perimetrales, técnicas de ataques a los sistemas de información, técnicas de verificación y chequeos en penetración como análisis de vulnerabilidades.<br>
 
-Propósitos:
+<br>
+Propósitos:<br>
 • Afianzar y Fortalecer en el estudiante con los fundamentos teórico-prácticos sobre seguridad informática básica al estudiante, que le permita comprender los aspectos más relevantes en entornos reales.
 
-Competencias generales del curso:
-• El estudiante adquiere conceptos sobre seguridad de la información, desarrolla las habilidades para la identificación de vulnerabilidades, amenazas y riesgos de seguridad informáticos y de la información.
-• El estudiante conoce e identifica los estándares que debe usar para los procesos de análisis, evaluación y gestión de los riesgos y los estándares de buenas prácticas que ayudarán a identificar los controles que deben existir en las organizaciones de acuerdo a esas buenas prácticas.
-• El estudiante adquiere los conceptos fundamentales para de identificar debilidades en los sistemas operativos y de red, los tipos de control existentes y su integración dentro de las políticas y procedimientos para la estructuración de Sistemas de gestión de seguridad de la información SGSI.
-• El estudiante adquiere la capacidad de formular y elaborar informes y documentación sobre el proceso de análisis, evaluación y gestión de riesgos, propuestas generales e implementación de soluciones de acuerdo al estándar y metodología aplicados.
+Competencias generales del curso:<br>
+• El estudiante adquiere conceptos sobre seguridad de la información, desarrolla las habilidades para la identificación de vulnerabilidades, amenazas y riesgos de seguridad informáticos y de la información.<br>
+• El estudiante conoce e identifica los estándares que debe usar para los procesos de análisis, evaluación y gestión de los riesgos y los estándares de buenas prácticas que ayudarán a identificar los controles que deben existir en las organizaciones de acuerdo a esas buenas prácticas.<br>
+• El estudiante adquiere los conceptos fundamentales para de identificar debilidades en los sistemas operativos y de red, los tipos de control existentes y su integración dentro de las políticas y procedimientos para la estructuración de Sistemas de gestión de seguridad de la información SGSI.<br>
+• El estudiante adquiere la capacidad de formular y elaborar informes y documentación sobre el proceso de análisis, evaluación y gestión de riesgos, propuestas generales e implementación de soluciones de acuerdo al estándar y metodología aplicados.<br>
 • El estudiante respeta los valores éticos y de seguridad en los escenarios donde se desempeña.<br>
                     </p>
       			</article>
