--- a/actividades.html
+++ b/actividades.html
@@ -63,10 +63,10 @@
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
 
-<!-- ESTA ES LA PAGINA PRINCIPAL, LO DICE ABAJO  -->
+<!-- ESTA PAGINA ES DE ACTIVIDADES, LO DICE ABAJO  -->
 
 
-    <h2>SEGURIDAD INFORMÁTICA - UNAD ECBTI</h2>
+    <h2>ACTIVIDADES</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
