--- a/actividades.html
+++ b/actividades.html
@@ -70,7 +70,7 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/candado.jpg" alt="Diseno">
+                        <img src="img/actividad.png" alt="Diseno">
                   	</figure>
                     <p>
                         Descripción General del Curso:<br>
