--- a/multimedia.html
+++ b/multimedia.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es" class"no-js">
-    <!-- comentario  -->
+   
     <head>
  		<meta charset="UTF-8">
         <meta content="mauricio perdomo" name="author"/>
@@ -72,27 +72,35 @@
                         <img src="img/multimedia.jpeg" alt="Diseno">
                   	</figure>
                     <p>
-                        Descripción General del Curso:<br>
-                        • En la actualidad los recursos informáticos y el uso de nuevas tecnologías para el procesamiento de
-información hacen parte de todas las organizaciones, y temas como seguridad en la información cobran más vigencia.
-El curso de Seguridad informática, pretende orientar a los estudiantes en los fundamentos de seguridad de la información, comprender las necesidades de proteger, salvaguardar la información de las empresas y mantener disponibles los servicios de redes y comunicaciones.<br>
-<br>
-En la unidad 1, Fundamentos de seguridad de la información; presenta los conceptos fundamentales necesarios para la comprensión de la seguridad, de los actores de la inseguridad, la necesidad de prevenir incidentes, los diferentes tipos de amenazas, la Criptografía, los conceptos básicos de seguridad en sistemas operativos.
-La segunda unidad Estándares y Normatividad, presenta las normas internacionales de mejores prácticas en aplicación de la seguridad informática, como ISO 27000, el análisis de riesgos y la gestión de riesgos
-y los conceptos básicos de auditoria de sistemas informáticos.
-La tercera unidad Seguridad en Redes, propone la temática referente a controles lógicos y perimetrales, técnicas de ataques a los sistemas de información, técnicas de verificación y chequeos en penetración como análisis de vulnerabilidades.<br>
+                        Definicion de multimedia:<br>
+                        • Multimedia es un término que procede de la lengua inglesa y que refiere a aquello que utiliza varios medios de manera simultánea en la transmisión de una información. Una presentación multimedia, por lo tanto, puede incluir fotografías, vídeos, sonidos y texto.<br>
+                        <figure>
+                        <img src="img/multimedia1.jpeg" alt="Diseno">
+                  		</figure>
+					<br>
+						El concepto se aplica a objetos y sistemas que apelan a múltiples medios físicos y/o digitales para comunicar sus contenidos. El término también se usa en referencia a los medios en sí que permiten almacenar y difundir contenidos con estas características.
+						La comunicación multimedia facilita la comprensión y el aprendizaje, ya que resulta muy parecida a la comunicación humana directa (cara a cara). En una conversación, observamos al interlocutor (lo que sería equivalente a un vídeo) y lo escuchamos (audio) mientras acompaña sus palabras con gestos y movimientos corporales (animaciones).
+						Una presentación o emisión multimedia puede realizarse en directo o estar grabada. La difusión de los contenidos, por otra parte, puede concretarse a través de Internet, proyectarse en una pantalla o desarrollarse en un escenario.
+						Un curso de inglés a distancia es un ejemplo de información multimedia. Ya sea online o mediante un CD-ROM o DVD-ROM, el estudiante puede observar vídeos para familiarizarse con el idioma, escuchar audios para aprender la pronunciación, participar de juegos interactivos con animaciones y leer textos con explicaciones sobre gramática y ortografía.
+						Las páginas web también pueden presentar desarrollos multimedia, con animaciones en HTML5 y Flash, vídeos insertados desde YouTube, música de fondo y material para leer. En estos casos, puede hablarse de multimedia interactiva, ya que es el usuario quien decide cómo será la presentación de la información y en qué momento iniciarla a través de sus clics.
+						<br>
+						<figure>
+                        <img src="img/multimedia2.jpeg" alt="Diseno">
+                  		</figure>
+					<br>
+					<br>
+						La integración del contenido multimedia supuso una de las más importantes revoluciones de la informática a nivel usuario de las últimas décadas. Hasta comienzos de los años 90, si bien existían los videojuegos y ya habían surgido programas educativos para ordenador, se trataba de productos aislados y de una complejidad muy moderada, dados los escasos recursos que ofrecían los equipos de la época.
+						A medida que el poderío de los ordenadores fue creciendo y que se comenzó a utilizar nuevos componentes, que ampliaban su funcionalidad, los desarrolladores fueron capaces de incluir contenido más variado y de combinarlo de forma cada vez menos costosa. Internet comenzó siendo un recurso lento y estático, pero poco a poco se benefició de las posibilidades tecnológicas para hacer uso de la multimedia como ningún otro medio.
+						Como ocurre con toda revolución, los primeros tiempos de la multimedia fueron una auténtica fiebre: todas las compañías querían abusar de la posibilidad de combinar texto, audio y vídeo en un solo espacio, lo cual dio lugar a una gran cantidad de contenido confuso y ruidoso, que ofrecía menos beneficios que sus estáticos antepasados.
+						Sin embargo, el tiempo, la experiencia y, sobre todo, el feedback de los usuarios, fueron moldeando los estándares de hoy en día. Salvando excepciones, lo más común es que cualquier sitio de Internet haga uso de varios tipos de datos para presentar su contenido; en el ámbito de la educación, por ejemplo, esto resulta especialmente beneficioso, siempre y cuando se dé un espacio a la imaginación y se incentive a los lectores a pensar por ellos mismos.
+						Tomando como ejemplo la teoría musical, una página que describe temas relacionados con la dirección de orquesta puede apoyarse en imágenes para graficar los pentagramas, en grabaciones de audio para demostrar los diferentes conceptos y formas de ejecución, y de vídeos para presentar a una persona haciendo uso de las técnicas expuestas. Toda la información centralizada, sin ocupar espacio físico y sin que pueda extraviarse o deteriorarse: el contenido multimedia digital es una de las herramientas más útiles para complementar el estudio.<br>
+						<br>
+					<br>
+					Lee todo en: Definición de multimedia - Qué es, Significado y Concepto <a href="http://definicion.de/multimedia/#ixzz4NMyZtewf" title="Fuente" target="_blank"
 
-<br>
-Propósitos:<br>
-• Afianzar y Fortalecer en el estudiante con los fundamentos teórico-prácticos sobre seguridad informática básica al estudiante, que le permita comprender los aspectos más relevantes en entornos reales.
 
-Competencias generales del curso:<br>
-• El estudiante adquiere conceptos sobre seguridad de la información, desarrolla las habilidades para la identificación de vulnerabilidades, amenazas y riesgos de seguridad informáticos y de la información.<br>
-• El estudiante conoce e identifica los estándares que debe usar para los procesos de análisis, evaluación y gestión de los riesgos y los estándares de buenas prácticas que ayudarán a identificar los controles que deben existir en las organizaciones de acuerdo a esas buenas prácticas.<br>
-• El estudiante adquiere los conceptos fundamentales para de identificar debilidades en los sistemas operativos y de red, los tipos de control existentes y su integración dentro de las políticas y procedimientos para la estructuración de Sistemas de gestión de seguridad de la información SGSI.<br>
-• El estudiante adquiere la capacidad de formular y elaborar informes y documentación sobre el proceso de análisis, evaluación y gestión de riesgos, propuestas generales e implementación de soluciones de acuerdo al estándar y metodología aplicados.<br>
-• El estudiante respeta los valores éticos y de seguridad en los escenarios donde se desempeña.<br>
                     </p>
+
       			</article>
     </section>
     <aside> 
@@ -113,12 +121,4 @@ Competencias generales del curso:<br>
     	</aside>
 		<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
-          <div id="apDiv26">Elaborado por: Luis Fernando Jaramillo Hernández, estudiante del programa Ing. de Sistemas </div>
-		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
-		  <div id="apDiv27">CEAD Dosquebradas - 2016</div>
-    	</Footer>
-   </body>
-    <script src="js/modernizr.js"></script>   
-    <script src="js/prefixfree.min.js"></script>
-    <script src="js/jquery-2.1.1.js"></script>   
-</html>
+          <div id="apDiv26">Elaborado por: grupo #301122_75, estudiantes del programa DISEÑOS DE SITIOS WEB, de la Universidad Nacional Abierta y a Distancia (UNAD) </div>
