--- a/multimedia.html
+++ b/multimedia.html
@@ -72,7 +72,7 @@
                         <img src="img/multimedia.jpeg" alt="Diseno">
                   	</figure>
                     <p>
-                        Definicion de multimedia:<br>
+             Definicion de multimedia:<br>
                         • Multimedia es un término que procede de la lengua inglesa y que refiere a aquello que utiliza varios medios de manera simultánea en la transmisión de una información. Una presentación multimedia, por lo tanto, puede incluir fotografías, vídeos, sonidos y texto.<br>
                        
                         <img src="img/multimedia1.jpg" alt="Diseno">
@@ -93,10 +93,9 @@
             Como ocurre con toda revolución, los primeros tiempos de la multimedia fueron una auténtica fiebre: todas las compañías querían abusar de la posibilidad de combinar texto, audio y vídeo en un solo espacio, lo cual dio lugar a una gran cantidad de contenido confuso y ruidoso, que ofrecía menos beneficios que sus estáticos antepasados.
             Sin embargo, el tiempo, la experiencia y, sobre todo, el feedback de los usuarios, fueron moldeando los estándares de hoy en día. Salvando excepciones, lo más común es que cualquier sitio de Internet haga uso de varios tipos de datos para presentar su contenido; en el ámbito de la educación, por ejemplo, esto resulta especialmente beneficioso, siempre y cuando se dé un espacio a la imaginación y se incentive a los lectores a pensar por ellos mismos.
             Tomando como ejemplo la teoría musical, una página que describe temas relacionados con la dirección de orquesta puede apoyarse en imágenes para graficar los pentagramas, en grabaciones de audio para demostrar los diferentes conceptos y formas de ejecución, y de vídeos para presentar a una persona haciendo uso de las técnicas expuestas. Toda la información centralizada, sin ocupar espacio físico y sin que pueda extraviarse o deteriorarse: el contenido multimedia digital es una de las herramientas más útiles para complementar el estudio.<br>
-            <br>
-          <br>
-          Lee todo en: Definición de multimedia - Qué es, Significado y Concepto <a href="http://definicion.de/multimedia/#ixzz4NMyZtewf" title="Fuente" target="_blank"
-                  
+            <p> Lee todo en: Definición de multimedia - Qué es, Significado y Concepto <a href="http://definicion.de/multimedia/#ixzz4NMyZtewf" title="Fuente" target="_blank" </a> </p>        
+
+
                     </p>
       			</article>
     </section>
