--- a/multimedia.html
+++ b/multimedia.html
@@ -115,7 +115,7 @@
     	</aside>
 		<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
-          <div id="apDiv26">Elaborado por: Luis Fernando Jaramillo Hernández, estudiante del programa Ing. de Sistemas </div>
+          <div id="apDiv26">Elaborado por: grupo #301122_75, estudiantes del programa DISEÑOS DE SITIOS WEB, de la Universidad Nacional Abierta y a Distancia (UNAD) </div>
 		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
 		  <div id="apDiv27">CEAD Dosquebradas - 2016</div>
     	</Footer>
