--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 información hacen parte de todas las organizaciones, y temas como seguridad en la información cobran más vigencia.
 El curso de Seguridad informática, pretende orientar a los estudiantes en los fundamentos de seguridad de la información, comprender las necesidades de proteger, salvaguardar la información de las empresas y mantener disponibles los servicios de redes y comunicaciones.<br>
 <br>
-En la unidad 1, Fundamentos de seguridad de la información; presenta los conceptos fundamentales necesarios para la comprensión de la seguridad, de los actores de la inseguridad, la necesidad de prevenir incidentes, los diferentes tipos de amenazas, la Criptografía, los conceptos básicos de seguridad en sistemas operativos.
-La segunda unidad Estándares y Normatividad, presenta las normas internacionales de mejores prácticas en aplicación de la seguridad informática, como ISO 27000, el análisis de riesgos y la gestión de riesgos
-y los conceptos básicos de auditoria de sistemas informáticos.
-La tercera unidad Seguridad en Redes, propone la temática referente a controles lógicos y perimetrales, técnicas de ataques a los sistemas de información, técnicas de verificación y chequeos en penetración como análisis de vulnerabilidades.<br>
+-En la unidad 1, Fundamentos de seguridad de la información; presenta los conceptos fundamentales necesarios para la comprensión de la seguridad, de los actores de la inseguridad, la necesidad de prevenir incidentes, los diferentes tipos de amenazas, la Criptografía, los conceptos básicos de seguridad en sistemas operativos.<br><br>
+-La segunda unidad, Estándares y Normatividad; presenta las normas internacionales de mejores prácticas en aplicación de la seguridad informática, como ISO 27000, el análisis de riesgos y la gestión de riesgos
+y los conceptos básicos de auditoria de sistemas informáticos.<br><br>
+-La tercera unidad, Seguridad en Redes; propone la temática referente a controles lógicos y perimetrales, técnicas de ataques a los sistemas de información, técnicas de verificación y chequeos en penetración como análisis de vulnerabilidades.<br>
 
 <br>
 Propósitos:<br>
