--- a/multimedia.html
+++ b/multimedia.html
@@ -113,7 +113,8 @@
     	</aside>
 		<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
-          <div id="apDiv26">Elaborado por: grupo #301122_75, estudiantes del programa DISEÑOS DE SITIOS WEB, de la Universidad Nacional Abierta y a Distancia (UNAD) </div>
+          <div id="apDiv26">Elaborado por: grupo #301122_75, estudiantes del programa DISEÑOS DE SITIOS WEB</div>
+          <div id="apDiv27">UNAD (CEAD) Santa Marta - 2016</div>
 		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
 		 	</Footer>
    </body>
