--- a/autores.html
+++ b/autores.html
@@ -18,7 +18,7 @@
         <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
-                  <div id="apDiv24">OVA Para curso xxxxxxxx - Tecnología en Desarrollo de Software</div>
+                  <div id="apDiv24">OVA PARA EL CURSO 204039 - SEGURIDAD INFORMÁTICA</div>
               </div>
             </header>
         	<p>&nbsp;</p>
