--- a/autores.html
+++ b/autores.html
@@ -67,11 +67,11 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Diseño de Sitios Web - SEGURIDAD INFORMÁTICA - UNAD ECBTI</h2>
+    <h2>AUTORES</h2>
 
                 <article>
                   <div class="w3-container">
-                    <h2>Autores</h2>
+                    
                     <!--p>In this example we combine JavaScript from Slideshows and Modals to create a Lightbox (Modal Image Gallery):</p-->
                     <div class="w3-row-padding" style="margin: 0 -16px;display: inline-block;text-align: center;">
                       <div class="w3-col s4" style="margin: 8px">
