trabajo al menú de lecturas
se anexan lecturas e iconos de siguiente y atras

--- a/lecturas1.html
+++ b/lecturas1.html
@@ -86,21 +86,7 @@
                         
 
 
-1.  SEGURIDAD, AMENAZAS, VULNERABILIDADES: <br>
-
-
-Seguridad de la Información: son todas aquellas medidas preventivas, reactivas de las personas, en las organizaciones y los sistemas tecnológicos que permitan salvaguardar la información buscando mantener la Confidencialidad, Autenticidad, Disponibilidad e Integridad de la misma. <br>
-
-Seguridad informática es una rama de la informática que está enfocada a la protección del hardware, software, los sistemas de información y las redes de datos.
-Otra definición que se puede encontrar es asegurar que los recursos del sistema de información de una organización se utilizan de la manera que se decidió y que el acceso a la información allí contenida, así como su modificación solo sea posible a las personas que se encuentren acreditadas y dentro de los límites de su autorización.<br>
-
-1.2 Fiabilidad, Confidencialidad, Integridad y Disponibilidad<br>
-Si bien es cierto que todos los componentes de un sistema informático están expuestos a un ataque, son los datos y la información los sujetos principales de protección de las técnicas de seguridad. La seguridad informática se dedica principalmente a proteger la confidencialidad, la integridad y la disponibilidad de la información, por tanto, actualmente se considera que la seguridad de los datos y la información comprende 3 aspectos fundamentales:<br>
-a)  Confidencialidad<br>
-b)  Integridad (seguridad de la información)<br>
-c)  Disponibilidad<br><br>
-
-Hay que tener en cuenta que tanto las amenazas como los mecanismos para contrarrestarla suelen afectar a estas 3 características de forma conjunta por tanto un fallo del sistema que haga que la información no sea accesible puede llevar consigo una pérdida de integridad. Generalmente tiene que existir los 3 aspectos descritos para que haya seguridad. Dependiendo del entorno en el que trabaje un sistema, a sus responsables les interesara dar prioridad a un cierto aspecto de la seguridad. Junto a estos 3 conceptos fundamentales se suele estudiar conjuntamente la autenticación y el no repudio. Suele referirse al grupo de estas características como CIDAN, nombre sacado de la inicial de cada característica.
+1.  SEGURIDAerística.
 <br>
 <figure>
                         <img src="img/datos.gif" alt="Diseno">
@@ -108,17 +94,9 @@ Hay que tener en cuenta que tanto las amenazas como los mecanismos para contrarr
                         <br>
                     </p>
 
-<div id="apDiv28"><a href="lecturas1.html" target="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
-<ul class="menu">
-                <li><a href="index.html" class="menu">Inicio</a></li>
-                <li><a href="lecturas.html" class="menu">Lecturas</a></li>
-                <li><a href="multimedia.html" class="menu">Multimedia</a></li>
-                <li><a href="actividades.html" class="menu">Actividades</a></li>
-                <li><a href="autores.html" class="menu">Autores</a></li>
-                <div id="apDiv19">
-                <center>
-                 
-              </ul>
+<div id="apDiv28"><a href="lecturas2.html" target="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+
+<div id="apDiv29"><a href="lecturas.html" target="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
 
 
       			</article>
