arreglo delos botones siguiente
anteriormente abría una ventana nueva, pero ya se arreglo cambiandolo a
"class"

--- a/lecturas.html
+++ b/lecturas.html
@@ -108,20 +108,9 @@ Hay que tener en cuenta que tanto las amenazas como los mecanismos para contrarr
                         <br>
                     </p>
 
-<div id="apDiv28"><a href="lecturas1.html" target="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
-<ul class="menu">
-                <li><a href="index.html" class="menu">Inicio</a></li>
-                <li><a href="lecturas.html" class="menu">Lecturas</a></li>
-                <li><a href="multimedia.html" class="menu">Multimedia</a></li>
-                <li><a href="actividades.html" class="menu">Actividades</a></li>
-                <li><a href="autores.html" class="menu">Autores</a></li>
-                <div id="apDiv19">
-                <center>
-                 
-              </ul>
-
-
-      			</article>
+<div id="apDiv28"><a href="lecturas1.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+             			</article>
+                  
     </section>
     <aside> 
                 <div id="apDiv5">
