--- a/lecturas1.html
+++ b/lecturas1.html
@@ -94,9 +94,10 @@
                         <br>
                     </p>
 
-<div id="apDiv28"><a href="lecturas2.html" target="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+<div id="apDiv28"><a href="lecturas2.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
 
-<div id="apDiv29"><a href="lecturas.html" target="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+
+<div id="apDiv29"><a href="lecturas.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
 
 
       			</article>
