--- a/lecturas.html
+++ b/lecturas.html
@@ -108,9 +108,9 @@ Hay que tener en cuenta que tanto las amenazas como los mecanismos para contrarr
                         <br>
                     </p>
 
-<div id="apDiv28"><a href="lecturas1.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+<div id="apDiv28"><a href="lecturas1.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>Pag. 1 de 7
              			</article>
-                  
+
     </section>
     <aside> 
                 <div id="apDiv5">
