--- a/lecturas1.html
+++ b/lecturas1.html
@@ -108,7 +108,7 @@ Si la autenticidad prueba quien es el autor y cuál es su destinatario, el no re
 <div id="apDiv28"><a href="lecturas2.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
 
 
-<div id="apDiv29"><a href="lecturas.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+<div id="apDiv29"><a href="lecturas.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>Pag. 2 de 7
 
 
       			</article>
