--- a/lecturas2.html
+++ b/lecturas2.html
@@ -103,7 +103,7 @@ Las amenazas de un sistema informático pueden provenir desde un hacker remoto q
 <div id="apDiv28"><a href="lecturas3.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
 
 
-<div id="apDiv29"><a href="lecturas1.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+<div id="apDiv29"><a href="lecturas1.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>Pag. 3 de 7
 
 
       			</article>
