--- a/lecturas4.html
+++ b/lecturas4.html
@@ -109,7 +109,7 @@ Un ejemplo del funcionamiento básico de la encriptación de caracteres:<br>
 <div id="apDiv28"><a href="lecturas5.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
 
 
-<div id="apDiv29"><a href="lecturas3.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+<div id="apDiv29"><a href="lecturas3.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div><br><br><br>Pag. 5 de 7
 
 
       			</article>
