--- a/lecturas5.html
+++ b/lecturas5.html
@@ -100,7 +100,7 @@ Por lo tanto, es necesario que las redes de empresas y los usuarios de internet 
 
 
 <div id="apDiv29"><a href="lecturas4.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
-
+<br><br><br><br>Pag. 6 de 7
 
       			</article>
     </section>
