--- a/lecturas6.html
+++ b/lecturas6.html
@@ -92,7 +92,7 @@ El primer método es el más seguro, pero requiere de una definición precisa de
 
 
 <div id="apDiv29"><a href="lecturas5.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>Pag. 7 de 7
 
       			</article>
     </section>
