--- a/lecturas3.html
+++ b/lecturas3.html
@@ -97,7 +97,7 @@
 <div id="apDiv28"><a href="lecturas4.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
 
 
-<div id="apDiv29"><a href="lecturas2.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+<div id="apDiv29"><a href="lecturas2.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div><br><br><br>Pag. 4 de 7
 
 
       			</article>
