Actualización en actividades.html
Se centralizan las tablas.

--- a/actividades.html
+++ b/actividades.html
@@ -70,7 +70,7 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure></figure>
-                    <table width="393" border="1">
+                    <table width="393" border="1" align="center">
                       <tbody>
                         <tr>
                           <th colspan="2" scope="col">ACTIVIDADES</th>
@@ -98,10 +98,10 @@
                       </tbody>
                     </table>
                     <p>&nbsp;</p>
-                    <table width="393" border="1">
+                    <table width="393" border="1" align="center">
                       <tbody>
                         <tr>
-                          <th colspan="2" scope="col">PRÁCTICAS</th>
+                          <th colspan="2" align="center" scope="col">PRÁCTICAS</th>
                         </tr>
                         <tr>
                           <td><a href="actividades/pra1.pdf">Guía práctica 1</a></td>
