--- a/multimedia.html
+++ b/multimedia.html
@@ -72,10 +72,10 @@
                         <img src="img/multimedia.jpeg" alt="Diseno">
                   	</figure>
                     <p>
-                <h2>Seguridad informática “vigilando” la multimedia<br></h2>
+      <h2>Seguridad informática “vigilando” la multimedia<br></h2>
       <p align="justify">Utilización conjunta y simultánea de diversos medios, como imágenes, sonidos y texto, en la transmisión de una información.
       Por lo anterior el término multimedia se aplica a los objetos o sistemas que de manera simultánea utilizan diversas formas para desarrollar su contenido expresado en imágenes, animación, sonido y videos con finalidades específicas dirigidas a un usuario en particular siendo de carácter informativo en distintos entornos.<br> <img src="img/gif1.gif"><br>
-     Toda la información que se desee compartir debemos mantenerla salvaguardada de todo tipo de ataque informático o por lo menos maximizar las medidas de seguridad para su protección.<br> <img src="img/gif2.gif"><br>
+     Toda la información que se desee compartir debemos mantenerla salvaguardada de todo tipo de ataque informático o por lo menos maximizar las medidas de seguridad para su protección<br> <img src="img/gif2.gif"><br>
       Una imagen, un audio o un video son potencialmente peligrosos en las manos equivocadas y es entonces donde aplicamos los tres principios fundamentales de la seguridad informática confidencialidad, integridad y disponibilidad.<br>         
      La seguridad informática consiste en asegurar que los recursos de sistemas y de información (material informático o programas, bases de datos, etc.) de una organización sean utilizados de la manera en que se decidió y que el acceso a la información allí contenida, así como su modificación, sólo sea posible a las personas que se encuentren acreditadas y dentro de los límites de su autorización.<br>
          <ul>
@@ -83,7 +83,8 @@
       <li>Físico: Los servidores (o nodos de cómputo) donde se encuentre esta información deben estar protegidos frente al acceso de extraños.<br></li>
       <li>Humano: El personal encargado de los servidores debe ser calificado y de confianza (sobornos / ingeniería social)<br></li>
       <li>Red: La red en la que se opera debe tener las protecciones correspondientes, protección en el envío de datos, firewalls, cifrado, entre otras.<br></li>
-      </ul> 
+      </ul>
+          
        
     </section>
 
